# playground-agent-llm

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: toc.yml
config/: config.ini.example  config.yml.example
src/: main.py  starter.py
src/agent/: __init__.py  agent.py  bodyguard.py  medium.py  possessed.py  seer.py  utils.py  villager.py  werewolf.py
src/player/: agent.py  possessed.py  seer.py  villager.py  werewolf.py
src/res/: config.ini.example
src/utils/: __init__.py  agent_logger.py  agent_util.py  agent_utils.py  stoppable_thread.py  timeout.py
