[project]
name = "playground-agent-llm"
version = "0.3.5"
description = "playground-agent-llm"
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiwolf-nlp-common==0.6.3",
    "python-ulid>=3.0.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.3.9",
    "langchain-ollama>=0.3.0",
    "python-dotenv>=1.1.0",
]

authors = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
maintainers = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
keywords = ["aiwolf"]

[project.urls]
Homepage = "https://aiwolfdial.github.io/aiwolf-nlp/"
