[project]
name = "aiwolf-nlp-agent"
version = "0.3.5"
description = "aiwolf-nlp-agent"
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiwolf-nlp-common==0.6.3",
    "python-ulid>=3.0.0",
    "pyyaml>=6.0.2",
]

authors = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
maintainers = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
keywords = ["aiwolf"]

[project.urls]
Homepage = "https://aiwolfdial.github.io/aiwolf-nlp/"

[dependency-groups]
lint = ["ruff>=0.12.1"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401", "F841"]
pydocstyle.convention = "google"
